--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "@react-icons/all-files": "^4.1.0",
+    "axios": "^1.7.9",
     "firebase": "^11.0.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
